[package]
name = "uniswap-cli"
version = "0.1.0"
edition = "2021"
author = "Frank Udoags"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", default-features = false, features = ["legacy"] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["full"] }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["ws"] }
eyre = "*"
hex = "*"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
